Fix footer and side menus when viewed on mobile devices

--- a/app/scss/partials/foundation_components/_side-nav.scss
+++ b/app/scss/partials/foundation_components/_side-nav.scss
@@ -37,6 +37,9 @@
 
 // Side-nav Discussion Filter
 .BoxFilter{
+	@media #{$small-only} {
+		display: none;
+	}
 	.FilterMenu{
 			padding: rem-calc(30 0);
 		 li{
@@ -146,7 +149,11 @@
   }
 }
 
-
+@media #{$small-only} {
+	.BoxDiscussionSidebar{
+		display: none;
+	}
+}
 
 
 // End Custom styles ////////////////////////////////////////////////////////////
